# goit-pyweb-08

./: config.ini  search.py
task_1/: connect.py  pyproject.toml  seeds.py
task_2/rabbitmq/: pyproject.toml
task_2/rabbitmq/rabbitmq/: config.ini  connect.py  consumer.py  models.py  producer.py
