[tool.poetry]
name = "authors-and-quotes"
version = "0.1.0"
description = ""
authors = ["iamleeon <165953114+iamleeon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
