[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = ""
authors = ["iamleeon <165953114+iamleeon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
mongoengine = "^0.28.2"
pymongo = "^4.8.0"
faker = "^26.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
